<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/recyclerBackground"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_dark"/>

    <Button
        android:id="@+id/btn_smoothline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smoothline"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_dark"/>

    <Button
        android:id="@+id/btn_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_dark"/>

    <Button
        android:id="@+id/btn_stragged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stragged"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_dark"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_ele"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

</LinearLayout>